Bug 333709 - KDEConnect (KDE Desktop Application) Crashes Upon Incoming Call
Summary: KDEConnect (KDE Desktop Application) Crashes Upon Incoming Call
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 0.5
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-22 04:01 UTC by mattlyons0
Modified: 2014-06-07 17:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mattlyons0 2014-04-22 04:01:13 UTC
The desktop application crashes upon a incoming phone call.
I have the mute speakers when there is a phone call setting enabled, but instead of muting it crashes. I am using pulseaudio and phonon-gstreamer for the backend.

This is 100% reproduceable.

Reproducible: Always

Steps to Reproduce:
1. Receive Phone Call
Actual Results:  
KDE-Connect crashes.

Expected Results:  
KDE-Connect mutes speakers.

Here is the backtrace (although I don't now if it will be very useful):

Application: kdeconnect (kdeconnectd), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
To enable execution of this file add
	add-auto-load-safe-path /usr/lib/libstdc++.so.6.0.19-gdb.py
line to your configuration file "/home/matt/.gdbinit".
To completely disable this security protection add
	set auto-load safe-path /
line to your configuration file "/home/matt/.gdbinit".
For more information about this security protection see the
"Auto-loading safe path" section in the GDB manual.  E.g., run from the shell:
	info "(gdb)Auto-loading safe path"
[Current thread is 1 (Thread 0x7fc109a14780 (LWP 685))]

Thread 2 (Thread 0x7fc0f8449700 (LWP 691)):
#0  0x00007fc102972419 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#1  0x00007fc102972c83 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fc102972e6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fc106b866a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fc106b586cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fc106b589c5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fc106a574df in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fc106a59b7f in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007fc107b700a2 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007fc106418d1d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fc109a14780 (LWP 685)):
[KCrash Handler]
#5  0x00007fc106368389 in raise () from /usr/lib/libc.so.6
#6  0x00007fc106369788 in abort () from /usr/lib/libc.so.6
#7  0x00007fc102c62e75 in ?? () from /usr/lib/libdbus-1.so.3
#8  0x00007fc102c59b41 in ?? () from /usr/lib/libdbus-1.so.3
#9  0x00007fc102c4ac7c in dbus_message_new_method_call () from /usr/lib/libdbus-1.so.3
#10 0x00007fc107db1c20 in ?? () from /usr/lib/libQtDBus.so.4
#11 0x00007fc107dad5fb in ?? () from /usr/lib/libQtDBus.so.4
#12 0x00007fc107daf502 in ?? () from /usr/lib/libQtDBus.so.4
#13 0x00007fc107dbaaeb in ?? () from /usr/lib/libQtDBus.so.4
#14 0x00007fc107dbac15 in QDBusInterface::QDBusInterface(QString const&, QString const&, QString const&, QDBusConnection const&, QObject*) () from /usr/lib/libQtDBus.so.4
#15 0x00007fc0f6760fa3 in ?? () from /usr/lib/kde4/kdeconnect_pausemusic.so
#16 0x00007fc0f6761b78 in ?? () from /usr/lib/kde4/kdeconnect_pausemusic.so
#17 0x000000000041bdac in ?? ()
#18 0x0000000000408ab9 in ?? ()
#19 0x00007fc106b6d6ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#20 0x0000000000408680 in ?? ()
#21 0x000000000040dbde in ?? ()
#22 0x00007fc106b6d6ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#23 0x000000000040f1d8 in ?? ()
#24 0x00007fc106b6d6ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#25 0x00007fc1085ffe8d in ?? () from /usr/lib/libQtNetwork.so.4
#26 0x00007fc108608ebd in ?? () from /usr/lib/libQtNetwork.so.4
#27 0x00007fc107087f0c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#28 0x00007fc10708e4d0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#29 0x00007fc108f6888a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#30 0x00007fc106b59a6d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#31 0x00007fc106b872e0 in ?? () from /usr/lib/libQtCore.so.4
#32 0x00007fc102972b84 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0x00007fc102972dc8 in ?? () from /usr/lib/libglib-2.0.so.0
#34 0x00007fc102972e6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#35 0x00007fc106b86685 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#36 0x00007fc107124fa6 in ?? () from /usr/lib/libQtGui.so.4
#37 0x00007fc106b586cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#38 0x00007fc106b589c5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#39 0x00007fc106b5dae9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#40 0x0000000000407f7a in ?? ()
#41 0x00007fc106354b05 in __libc_start_main () from /usr/lib/libc.so.6
#42 0x0000000000407fcb in _start ()

If you need me to install some debugger or something I'm completely willing to help. Thanks for making this awesome program.
Comment 1 Albert Vaca Cintora 2014-06-05 21:06:52 UTC
*** Bug 332153 has been marked as a duplicate of this bug. ***
Comment 2 Albert Vaca Cintora 2014-06-07 16:35:08 UTC
Git commit 5c66b891e292c76416099724044ad2fdac5bcd79 by Albert Vaca.
Committed on 05/06/2014 at 20:05.
Pushed by albertvaka into branch 'master'.

Fixed bug with mixers not being correctly converted to dbus paths

M  +6    -2    kded/plugins/pausemusic/pausemusicplugin.cpp

http://commits.kde.org/kdeconnect-kde/5c66b891e292c76416099724044ad2fdac5bcd79
Comment 3 mattlyons0 2014-06-07 17:53:44 UTC
Thank you,
I can confirm it is resolved for me when building from the repo.