Fixed bug with mixers not being correctly converted to dbus paths

BUG: 333709